--- a/trunk/eHelpDesk/.htaccess
+++ b/trunk/eHelpDesk/.htaccess
@@ -1,4 +1,4 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ /ehelpdesk/index.php/$1 [L]
+RewriteRule ^(.*)$ /ehelpdesk/ehelpdesk-solution/eHelpDesk/index.php/$1 [L]
