--- a/trunk/eHelpDesk/resources/.htaccess
+++ b/trunk/eHelpDesk/resources/.htaccess
@@ -1,3 +1,3 @@
-order allow,deny
-deny from all
-ErrorDocument 403 http://localhost/ehelpdesk
+#order allow,deny
+#deny from all
+#ErrorDocument 403 http://localhost/ehelpdesk
